Update momo image

--- a/app/code/Boolfly/MomoWallet/view/frontend/web/template/payment/momo-button.html
+++ b/app/code/Boolfly/MomoWallet/view/frontend/web/template/payment/momo-button.html
@@ -6,7 +6,7 @@
                data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
         <label class="label" data-bind="attr: {'for': getCode()}">
             <!-- Momo Logo -->
-            <img attr="src: getPaymentAcceptanceMarkSrc(), alt: $t('Acceptance Mark'), width: 40, height: 40" class="payment-icon"/>
+            <img src="https://business.momo.vn/assets/landingpage/img/931b119cf710fb54746d5be0e258ac89-logo-momo.png" attr="alt: $t('Acceptance Mark'), width: 40, height: 40" class="payment-icon"/>
             <!-- Momo Logo -->
             <span data-bind="text: getTitle()"></span>
         </label>
