--- a/app/code/FoTech/CustomModule/view/frontend/templates/currencyexchangerate_index.phtml
+++ b/app/code/FoTech/CustomModule/view/frontend/templates/currencyexchangerate_index.phtml
@@ -6,20 +6,20 @@
 $currencies = $block->getCurrencyExchangeRate()['Exrate'];
 //var_dump();
 ?>
-<h2>Currency Exchange Rate</h2>
+<h2>Tỉ giá tiền tệ</h2>
 <table>
     <tr>
-        <th>Currency Code</th>
-        <th>Currency Name</th>
-        <th>Buy</th>
-        <th>Transfer</th>
-        <th>Sell</th>
+        <th>Tên ngoại tệ</th>
+        <th class="currency-code">Mã ngoại tệ</th>
+        <th>Giá mua bằng tiền mặt</th>
+        <th>Giá mua qua chuyển khoản</th>
+        <th>Giá bán</th>
     </tr>
     <?php foreach($currencies as $currency): ?>
         <?php $currency = $currency['@attributes']?>
         <tr>
-            <td><?php echo $currency['CurrencyCode']?></td>
             <td><?php echo $currency['CurrencyName']?></td>
+            <td class="currency-code"><?php echo $currency['CurrencyCode']?>&nbsp&nbsp&nbsp<div class="currency-flag currency-flag-<?php echo strtolower($currency['CurrencyCode']); ?>"></div></td>
             <td><?php echo $currency['Buy']?></td>
             <td><?php echo $currency['Transfer']?></td>
             <td><?php echo $currency['Sell']?></td>
