--- a/app/code/FoTech/CustomModule/view/frontend/web/css/news_style.css
+++ b/app/code/FoTech/CustomModule/view/frontend/web/css/news_style.css
@@ -1,12 +1,12 @@
 .module-title {
-    /*font-family: 'Open Sans', Helvetica, Arial, sans-serif;*/
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     margin: 0 auto;
     max-width: 600px;
 }
 
 .new {
     margin: 0 auto;
-    /*font-family: 'Open Sans', Helvetica, Arial, sans-serif;*/
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     max-width: 600px;
 }
 .new img {
